<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="You Are Welcome!"/>

  <EditText
    android:id="@+id/loginField"
    android:layout_width="180dp"
    android:layout_marginTop="24dp"
    android:layout_height="wrap_content"
    android:hint="@string/login" />

  <EditText
    android:id="@+id/passwordField"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:inputType="textPassword"
    android:hint="@string/password" />

  <Button
    android:id="@+id/signInButton"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:enabled="false"
    android:text="@string/sign_in" />

</LinearLayout>