<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  tools:background="@color/black"
  android:id="@+id/container"
  android:layout_height="match_parent">

  <com.yandex.mapkit.mapview.MapView
    android:id="@+id/mapView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <LinearLayout
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:id="@+id/orderDetailsContainer"
    android:orientation="vertical"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView
      android:id="@+id/defaultStartButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/shape_default_start_point"
      android:foreground="?android:selectableItemBackground"
      android:gravity="center_vertical"
      android:padding="16dp"
      android:text="@string/where_to_go" />


    <LinearLayout
      android:id="@+id/filledPointsContainer"
      android:layout_width="match_parent"
      android:visibility="gone"
      tools:visibility="visible"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/select_point_action_color"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/enter_start_point" />

      <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/select_point_action_color"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/enter_finish_point" />
    </LinearLayout>

    <Button
      android:id="@+id/orderButton"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="32dp"
      android:text="@string/order" />

  </LinearLayout>
</FrameLayout>